load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "asset.go",
        "asset_reference.go",
        "asset_store.go",
        "qualifier_container.go",
    ],
    importpath = "github.com/buildbarn/bb-asset-hub/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/asset:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
    ],
)
