load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "action_cache_asset_store.go",
        "asset.go",
        "asset_reference.go",
        "asset_store.go",
        "authorizing_asset_store.go",
        "blob_access_asset_store.go",
        "digest.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/asset",
        "//pkg/qualifier",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "storage_test",
    srcs = [
        "action_cache_asset_store_test.go",
        "asset_reference_test.go",
        "authorizing_asset_store_test.go",
        "blob_access_asset_store_test.go",
    ],
    deps = [
        ":storage",
        "//internal/mock",
        "//pkg/proto/asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
