load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "asset_proto",
    srcs = ["asset.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:remote_asset_proto",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
    ],
)

go_proto_library(
    name = "asset_go_proto",
    importpath = "github.com/buildbarn/bb-asset-hub/pkg/proto/asset",
    proto = ":asset_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":asset_go_proto"],
    importpath = "github.com/buildbarn/bb-asset-hub/pkg/proto/asset",
    visibility = ["//visibility:public"],
)
