load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "blobstore",
    srcs = [
        "asset_blob_access_creator.go",
        "asset_blob_access_replicator.go",
        "asset_read_buffer_factory.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/storage/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/asset",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/local",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/replication",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
