load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bb_remote_asset_proto",
    srcs = ["bb_remote_asset.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/bb_remote_asset/fetch:fetch_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/auth:auth_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
    ],
)

go_proto_library(
    name = "bb_remote_asset_go_proto",
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset",
    proto = ":bb_remote_asset_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/bb_remote_asset/fetch",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/auth",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
    ],
)

go_library(
    name = "bb_remote_asset",
    embed = [":bb_remote_asset_go_proto"],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset",
    visibility = ["//visibility:public"],
)
