load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    embed = [":fetcher_go_proto"],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/fetch",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "fetcher_go_proto",
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/fetch",
    proto = ":fetch_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)

proto_library(
    name = "fetch_proto",
    srcs = ["fetcher.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)
