load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "fetch",
    embed = [":fetch_go_proto"],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/fetch",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "fetch_proto",
    srcs = ["fetcher.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http:http_proto",
        "@googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "fetch_go_proto",
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/fetch",
    proto = ":fetch_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http",
        "@org_golang_google_genproto_googleapis_rpc//status",
    ],
)
