load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    embed = [":pusher_go_proto"],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/push",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pusher_go_proto",
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/push",
    proto = ":push_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/rpc:status_go_proto"],
)

proto_library(
    name = "push_proto",
    srcs = ["pusher.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/rpc:status_proto"],
)
